<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.hskj.damnicomniplusvic.sturxdemo.fragment.ThreeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/layout_12dp"
        android:paddingLeft="@dimen/layout_12dp"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:layout_height="@dimen/layout_50dp"
            android:id="@+id/text6"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="@dimen/layout_70dp"
            android:layout_height="@dimen/layout_50dp"
            android:text="@string/load"
            android:id="@+id/loaddata6"
            android:clickable="true"
            android:onClick="loaddata6"/>
        <include layout="@layout/tip_bt"/>
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="@dimen/layout_12dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clearMemoryCacheBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearMemoryCache" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clearMemoryAndDiskCacheBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearMemoryAndDiskCache" />

    </LinearLayout>

</LinearLayout>
